init bootstrap add

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-nav-bar></app-nav-bar>
+<nav class="navbar-nav fixed-top navbar-expand-md navbar-light bg-light Navigation">
+  <div class="wrapper">
+    <div id="logo">
+      <p></p>
+    </div>
+  </div>
+</nav>
 <app-mood-ometer></app-mood-ometer>
