--- a/src/app/mood-ometer/mood-ometer.component.html
+++ b/src/app/mood-ometer/mood-ometer.component.html
@@ -1,8 +1,9 @@
-
-<div class="content">
-<mat-radio-group class="radio-group" [(ngModel)]="userChoice">
-<mat-radio-button color="primary" class="radioButton" *ngFor="let possibility of possibilities" [value]="possibility">{{possibility}}</mat-radio-button>
-<button mat-raised-button class="button">Send</button>
-</mat-radio-group>
-
+<div class="container myContainer">
+    <mat-radio-group class="radio-group" [(ngModel)]="userChoice">
+      <div class="row">
+      <mat-radio-button color="primary" class="radioButton" *ngFor="let possibility of possibilities"
+                        [value]="possibility" (change)="onItemChange(possibility)">{{possibility}}</mat-radio-button>
+      <button mat-raised-button>Send</button>
+      </div>
+    </mat-radio-group>
 </div>
