--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-  margin: 0;
-  padding: 0;
-  background-color: #EF7D00;
-}
 #content{
   margin-top: 100px;
   width: 100%;
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #EF7D00 !important;
+}
