--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <nav class="navbar-nav fixed-top navbar-expand-md navbar-light bg-light Navigation">
-  <div class="wrapper">
-    <div id="logo">
-      <p></p>
-    </div>
-  </div>
+  <div id="logo"></div>
 </nav>
 <app-mood-ometer></app-mood-ometer>
