--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-#content{
-  margin-top: 100px;
-  width: 100%;
-}
 
 html, body { height: 100%; }
 body {
   margin: 0;
+  padding: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: #EF7D00 !important;
 }
