--- a/src/app/mood-ometer/mood-ometer.component.css
+++ b/src/app/mood-ometer/mood-ometer.component.css
@@ -19,5 +19,10 @@
 }
 .myContainer{
   padding-top: 100px;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+.myCol{
+  background-color: aliceblue !important;
 }
 
