--- a/src/app/mood-ometer/mood-ometer.component.html
+++ b/src/app/mood-ometer/mood-ometer.component.html
@@ -1,11 +1,11 @@
 <div class="container myContainer">
   <mat-radio-group class="radio-group" [(ngModel)]="userChoice">
     <div class="row">
-      <div class="col-11">
+      <div class="col-11" align="right">
         <mat-radio-button color="primary" class="radioButton" *ngFor="let possibility of possibilities"
                           [value]="possibility" (change)="onItemChange(possibility)">{{possibility}}</mat-radio-button>
       </div>
-      <div class="col-1 align-content-start">
+      <div class="col-1" align="right">
         <button mat-raised-button>Send</button>
       </div>
     </div>
