add the mood meter and small ui changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <nav class="navbar-nav fixed-top navbar-expand-md navbar-light bg-light Navigation">
   <div id="logo"></div>
+  <nav style="padding-left: 10px; padding-top: 20px">
+    <a routerLink="/mood">MoodOMeter</a>
+  </nav>
 </nav>
-<app-mood-ometer></app-mood-ometer>
+  <router-outlet></router-outlet>
+
+
