--- a/src/app/mood-ometer/mood-ometer.component.html
+++ b/src/app/mood-ometer/mood-ometer.component.html
@@ -1,13 +1,18 @@
-<div class="container myContainer">
-  <mat-radio-group class="radio-group" [(ngModel)]="userChoice">
+<div class="container-fluid myContainer">
     <div class="row">
-      <div class="col-11" align="right">
-        <mat-radio-button color="primary" class="radioButton" *ngFor="let possibility of possibilities"
-                          [value]="possibility" (change)="onItemChange(possibility)">{{possibility}}</mat-radio-button>
-      </div>
-      <div class="col-1" align="right">
-        <button mat-raised-button>Send</button>
+      <mat-radio-group class="radio-group" [(ngModel)]="userChoice">
+        <div class="col-11" align="center">
+          <mat-radio-button color="primary" class="radioButton" *ngFor="let possibility of possibilities"
+                            [value]="possibility"
+                            (change)="onItemChange(possibility)">{{possibility}}</mat-radio-button>
+        </div>
+        <div class="col-1" align="right">
+          <button mat-raised-button (click)="addEntry()">Send</button>
+        </div>
+      </mat-radio-group>
+      <div class="col-6">
+        <app-pie-chart align="right"></app-pie-chart>
       </div>
     </div>
-  </mat-radio-group>
 </div>
+
