--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,3 +24,21 @@
   background: url(src/assets/img/coffeeright250x250.png);
   background-size: cover;
 }
+nav a {
+  padding: 5px 10px;
+  text-decoration: none;
+  margin-top: 10px;
+  display: inline-block;
+  background-color: #eee;
+  border-radius: 4px;
+}
+nav a:visited, a:link {
+  color: #334953;
+}
+nav a:hover {
+  color: #039be5;
+  background-color: #cfd8dc;
+}
+nav a.active {
+  color: #039be5;
+}
