--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #EF7D00 !important;
+  background-color: #fafafa !important;
 }
