fixed most comments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar-nav fixed-top navbar-expand-md navbar-light bg-light Navigation">
   <div id="logo"></div>
   <nav style="padding-left: 10px; padding-top: 20px">
-    <a routerLink="/mood">MoodOMeter</a>
+    <a routerLink="/moodometer">MoodOMeter</a>
   </nav>
 </nav>
   <router-outlet></router-outlet>
