--- a/src/app/mood-ometer/mood-ometer.component.html
+++ b/src/app/mood-ometer/mood-ometer.component.html
@@ -7,7 +7,7 @@
                             (change)="onItemChange(possibility)">{{possibility}}</mat-radio-button>
         </div>
         <div class="col-1" align="right">
-          <button mat-raised-button (click)="addEntry()">Send</button>
+          <button mat-raised-button (click)="postMoodSelection()">Send</button>
         </div>
       </mat-radio-group>
       <div class="col-6">
