--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<nav class="navbar-nav fixed-top navbar-expand-md navbar-light bg-light Navigation">
+<nav class="fixed-top Navigation">
   <div id="logo"></div>
   <nav style="padding-left: 10px; padding-top: 20px">
-    <a routerLink="/moodometer">MoodOMeter</a>
+    <a style="padding-left: 10px; padding-top: 20px" routerLink="/moodometer">MoodOMeter</a>
   </nav>
 </nav>
-  <router-outlet></router-outlet>
-
+<div class="content">
+<router-outlet></router-outlet>
+</div>
 
