--- a/src/app/mood-ometer/mood-ometer.component.css
+++ b/src/app/mood-ometer/mood-ometer.component.css
@@ -1,29 +1,38 @@
-.content{
-  padding-top: 100px;
-  width: 100%;
-}
-.radio-group{
+.radio-group {
   display: flex;
   flex-direction: row;
   margin-left: 10%;
   margin-top: 10%;
 }
-.radioButton{
+
+.radioButton {
   margin-right: 10px;
 }
-.button{
+
+.button {
   margin-bottom: 10px;
 }
-.moodRadioRow{
+
+.moodRadioRow {
   background-color: #fafafa;
 }
-.myContainer{
+
+.myContainer {
   margin-left: 0 !important;
   margin-right: 0 !important;
   padding-right: 0 !important;
   padding-left: 0 !important;
 }
-.myCol{
+
+.myCol {
   background-color: aliceblue !important;
+}
+
+.bar {
+  height: 300px !important;
+  width: 120px !important;
+}
+p{
+  font-family: 'Quattrocento Sans', sans-serif;
 }
 
