--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,26 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: #fafafa !important;
 }
+.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle{
+  border-color:rgb(239, 125, 0);
+}
+
+.mat-radio-button.mat-accent .mat-radio-inner-circle{
+  color:rgb(239, 125, 0);
+  background-color:rgb(239, 125, 0) ;
+}
+
+.mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element {
+  background-color:rgb(239, 125, 0)
+}
+/*div[class="row"] {
+  outline: 1px dotted rgba(0, 0, 0, 0.25);
+}
+
+div[class^="col-"] {
+  background-color: rgba(255, 0, 0, 0.2);
+  outline: 1px dotted rgba(0, 0, 0, 0.5);
+}*/
+.content{
+  margin-top: 100px !important;
+}
