--- a/src/app/refresh-button-charts/refresh-button-charts.component.html
+++ b/src/app/refresh-button-charts/refresh-button-charts.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button>4h</button>
+<button mat-raised-button (click)="setMoodAvg()">4h</button>
 <button mat-raised-button>24h</button>
 <button mat-raised-button>48h</button>
