finished first feature, started second

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div id="logo"></div>
   <nav style="padding-left: 10px; padding-top: 20px">
     <a style="padding-left: 10px; padding-top: 20px" routerLink="/moodometer">MoodOMeter</a>
+    <a style="padding-left: 10px; padding-top: 20px" routerLink="/arrival">ArrivalTable</a>
   </nav>
 </nav>
 <div class="content">
