--- a/src/app/arrival-table/arrival-table.component.html
+++ b/src/app/arrival-table/arrival-table.component.html
@@ -1,4 +1,4 @@
-<table mdbTable striped="true" bordered="true">
+<table mdbTable striped="true" bordered="true" class="yee">
   <thead>
   <tr>
     <th *ngFor="let head of headElements" scope="col">{{head}} </th>
