repair refresh function

--- a/src/app/refresh-button-charts/refresh-button-charts.component.html
+++ b/src/app/refresh-button-charts/refresh-button-charts.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button (click)="setMood('4h')">4h</button>
-<button mat-raised-button (click)="setMood('24h')">24h</button>
-<button mat-raised-button (click)="setMood('48h')">48h</button>
+<button mat-raised-button (click)="triggerSet('4h')">4h</button>
+<button mat-raised-button (click)="triggerSet('24h')">24h</button>
+<button mat-raised-button (click)="triggerSet('48h')">48h</button>
